--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,17 @@
-name: Publish .NET package to NuGet.org
+name: Publish FAST.FBasicInterpreter package to NuGet.org
 
 on:
   push:
     branches:
       - main # or your default branch, like 'master'
+    paths:
+      - 'FAST.FBasic/FAST.FBasic/FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj'
+  workflow_dispatch: # Allows manual trigger from the GitHub UI
+
+env:
+  PROJECT_PATH: 'FAST.FBasic/FAST.FBasic/FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj'
+  BUILD_CONFIGURATION: 'Release'
+  NUGET_FEED_URL: 'https://api.nuget.org/v3/index.json'
 
 jobs:
   publish:
@@ -18,10 +26,11 @@ jobs:
         dotnet-version: '8.0.x' # Use your target .NET version
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ${{ env.PROJECT_PATH }}
 
     - name: Build and pack the project
-      run: dotnet pack FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release --output ./nupkg --no-build
- 
-    - name: Push the package to NuGet.org
-      run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet pack ${{ env.PROJECT_PATH }} --configuration ${{ env.BUILD_CONFIGURATION }} --output ./nupkg --no-build
+
+    - name: Push the package to NuGet.org (Publish)
+      run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source ${{ env.NUGET_FEED_URL }}
+      
