--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch: # Allows manual trigger from the GitHub UI
 
 env:
-  PROJECT_PATH: 'FAST.FBasic/FAST.FBasic/FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj'
+  PROJECT_PATH: 'FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj'
   BUILD_CONFIGURATION: 'Release'
   NUGET_FEED_URL: 'https://api.nuget.org/v3/index.json'
 
