--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: '8.0.x' # Use your target .NET version
 
     - name: Restore dependencies
-      run: dotnet restore ${{ env.PROJECT_PATH }}
+      run: dotnet restore #COUT: ${{ env.PROJECT_PATH }}
 
     - name: Build and pack the project
       run: dotnet pack ${{ env.PROJECT_PATH }} --configuration ${{ env.BUILD_CONFIGURATION }} --output ./nupkg #COUT: --no-build
