--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+' # Triggers on tags like v1.0.0, v2.1.5, etc.
+    branches:
+      - main # or your default branch, like 'master'
+  workflow_dispatch: # Allows manual trigger from the GitHub UI
 
 jobs:
   deploy:
