--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,13 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
+    - name: Build Project
+      run: dotnet build FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release --no-restore
+
+    - name: Pack Project
+      run: dotnet pack FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release -p:PackageVersion=1.0.0 --no-build --output nupkg
+      #run: dotnet pack FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release -p:PackageVersion=${{ env.PACKAGE_VERSION }} --no-build --output nupkg
+
     - name: Get Package Version
       id: get_version
       run: |
