--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,31 @@
-name: Deploy to NuGet
+name: Publish NuGet Package
 
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+' # Triggers on tags like v1.0.0, v2.1.5, etc.
-    branches:
-      - main # or your default branch, like 'master'
+      - 'v*' # Trigger on version tags like v1.2.3
   workflow_dispatch: # Allows manual trigger from the GitHub UI
 
 jobs:
-  deploy:
+  build-and-publish:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '8.0.x'
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x' # or your target version
 
-    - name: Get Package Version ${{ env.PACKAGE_VERSION }}
-      id: get_version
-      run: |
-        VERSION="${{github.ref_name}}"
-        VERSION_WITHOUT_V="${VERSION#v}"
-        echo "PACKAGE_VERSION=$VERSION_WITHOUT_V" >> $GITHUB_ENV
-      shell: bash
-    - name: Build and Pack
-      run: dotnet pack FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release -p:PackageVersion=1.0.0 --output nupkg
-      #run: dotnet pack FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release -p:PackageVersion=${{ env.PACKAGE_VERSION }} --no-build --output nupkg
+      - name: Restore dependencies
+        run: dotnet restore FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj
 
-    - name: Push package to NuGet
-      run: dotnet nuget push "nupkg/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      - name: Build project
+        run: dotnet build FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release --no-restore
+
+      - name: Pack NuGet package
+        run: dotnet pack FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj --configuration Release --no-build --output ./nuget
+
+      - name: Publish package to NuGet.org
+        run: dotnet nuget push ./nuget/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
