--- a/FAST.FBasic.InteractiveConsole/FAST.FBasicInteractiveConsole.csproj
+++ b/FAST.FBasic.InteractiveConsole/FAST.FBasicInteractiveConsole.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+    <PackageReference Include="System.Data.Odbc" Version="9.0.9" />
   </ItemGroup>
 
   <ItemGroup>
