Better execution Environment and Results

--- a/FAST.FBasic.InteractiveConsole/FAST.FBasicInteractiveConsole.csproj
+++ b/FAST.FBasic.InteractiveConsole/FAST.FBasicInteractiveConsole.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\FAST.FBasicInterpreter\FAST.FBasicInterpreter.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="FBasicSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
