--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,10 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x' # or your target version
+          dotnet-version:
+            8.0.x
+            9.0.x
+
 
       - name: Restore dependencies
         run: dotnet restore FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj
