-------------------------------------------------------| New IFBasicLibraryWithMemoryi interface, FBasicStackLibrary, AI providers

--- a/FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj
+++ b/FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="README.MD">
+    <None Update="ReleaseNotes.md">
       <PackagePath>\</PackagePath>
       <Pack>True</Pack>
     </None>
