Demo Database, Major Improvements, Word Templating

--- a/FAST.FBasic.InteractiveConsole/FBasicSettings.json
+++ b/FAST.FBasic.InteractiveConsole/FBasicSettings.json
@@ -1,6 +1,6 @@
 {
   "Settings": {
-    "ProgramsFolder": "~\\..\\..\\..\\..\\FAST.FBasic.InteractiveConsole\\Tests", // ~ stands for current directory
+    "ProgramsFolder": "~\\..\\..\\..\\..\\..\\FAST.FBasic.InteractiveConsole\\Tests", // ~ stands for current directory
     "Startup": "helloWorld.bas"
   },
   "ConnectionStrings": {
