--- a/FAST.FBasic.InteractiveConsole/FAST.FBasicInteractiveConsole.csproj
+++ b/FAST.FBasic.InteractiveConsole/FAST.FBasicInteractiveConsole.csproj
@@ -5,12 +5,12 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
-    <PackageReference Include="System.Data.Odbc" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="BusinessCases\Scoring\" />
+    <Folder Include="Tests\Output\" />
   </ItemGroup>
 
   <ItemGroup>
