Final version of FBasic Templating Library

--- a/FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj
+++ b/FAST.FBasicInterpreter/FAST.FBasicInterpreter.csproj
@@ -18,6 +18,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Packages\**" />
+    <EmbeddedResource Remove="Packages\**" />
+    <None Remove="Packages\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="Core\FBasicSourceProgramFile.cs" />
   </ItemGroup>
 
