--- a/FAST.FBasic.TemplatingLibrary/FAST.FBasic.TemplatingLibrary.csproj
+++ b/FAST.FBasic.TemplatingLibrary/FAST.FBasic.TemplatingLibrary.csproj
@@ -20,4 +20,12 @@
 	<Platforms>AnyCPU;x64</Platforms>
 
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FAST.FBasic.LibraryToolkit\FAST.FBasic.LibraryToolkit.csproj" />
+  </ItemGroup>
 </Project>
