--- a/FAST.FBasic.LibraryToolkit/FAST.FBasic.LibraryToolkit.csproj
+++ b/FAST.FBasic.LibraryToolkit/FAST.FBasic.LibraryToolkit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+	  <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -10,7 +10,7 @@
 	  <Copyright>Global Cloud Services EOOD</Copyright>
 	  <PackageOutputPath>.\Packages</PackageOutputPath>
 	  <PackageId>FAST.FBasicLibraryToolkit</PackageId>
-	  <Version>1.0.1</Version>
+	  <Version>1.0.2</Version>
 	  <Authors>GCS</Authors>
 	  <RepositoryUrl>https://github.com/aafent/FAST.FBasic</RepositoryUrl>
 	  <PackageProjectUrl>https://github.com/aafent/FAST.FBasic/blob/main/README.md</PackageProjectUrl>
